fixed nav alignment issue

--- a/css/screen.css
+++ b/css/screen.css
@@ -71,9 +71,6 @@ div#logo img {
    width: 100%;
 }
 
-/**div#logo img {
-   width: 100%;
-} **/
 
 
 /***  Navigation  ***/
@@ -126,7 +123,6 @@ nav#main ul {
 }**/
 nav#main ul li{
    display: inline;
-   margin: 15px;
 }
 
 /** @media screen and (min-width: 480px) {
